--- a/index.html
+++ b/index.html
@@ -345,6 +345,7 @@
     <a href="projetcs.html">Projekte</a>
     <a href="contact.html">Kontakt</a>
 </div>
+    <audio id="bg-music" src="bgmusik.mp3" loop></audio>
     <div class="container">
         <h1 class="intro">
             <span class="hello">Hello</span><br> 
