--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
     <!-- Navigationsleiste -->
     <div class="navbar">
         <a href="index.html">Home</a>
-        <a href="about.html">Projekte</a>
+        <a href="projects.html">Projekte</a>
         <a href="contact.html">Kontakt</a>
     </div>
     
