--- a/contact.html
+++ b/contact.html
@@ -134,7 +134,7 @@
             <button class="copy-btn" onclick="copyToClipboard('me.fullrisk@gmail.com')">E-Mail</button>
             <button class="copy-btn" onclick="copyToClipboard('https://github.com/FullRisk')">GitHub</button>
             <button class="copy-btn" onclick="copyToClipboard('hab kein twitter lol')">Twitter</button>
-            <button class="copy-btn" onclick="copyToClipboard('+43 0660 222 0168')">Nummer</button>
+            <button class="copy-btn" onclick="copyToClipboard('999')">Nummer</button>
         </div>
     </div>
 
