--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
             <span class="name">FullRisk</span>
         </h1>
         <div class="content">
-            <p class="text">A 15 year old hobby programmer who loves learning new things
+            <p class="text">A hobby programmer who loves learning new things
 and is interested in BobTony.</p>
             <a href="https://github.com/FullRisk" target="_blank" class="github-link">My GitHub!</a>
         </div>
