--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       
     .navbar {
         width: 100%;
-        background-color: #1a1a1a;
+        background-color: #fff;
         padding: 15px 0;
         text-align: center;
         position: fixed;
@@ -75,7 +75,7 @@
         z-index: 1000;
     }
     .navbar a {
-        color: #fff;
+        color: #000000;
         text-decoration: none;
         margin: 0 15px;
         font-size: 18px;
@@ -87,8 +87,8 @@
         body, html {
             height: 100%;
             font-family: 'Fira Code', monospace;
-            background-color: #2c2c2c; /* Hintergrund weiß */
-            color: #000000; /* Standardtext schwarz */
+            background-color: #00000; /* Hintergrund weiß */
+            color: #00000; /* Standardtext schwarz */
             display: flex;
             justify-content: center;
             align-items: center;
@@ -352,7 +352,7 @@
             <span class="name">FullRisk</span>
         </h1>
         <div class="content">
-            <p class="text">A hobby programmer who loves learning new things
+            <p class="text">A 15 year old hobby programmer who loves learning new things
 and is interested in BobTony.</p>
             <a href="https://github.com/FullRisk" target="_blank" class="github-link">My GitHub!</a>
         </div>
@@ -416,4 +416,3 @@ document.body.addEventListener('click', () => {
     <audio id="bg-music" src="bgmusik.mp3" loop></audio>
 </body>
 </html>
-
