--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
       <audio loop autoplay>
         <source src="bgmusik.mp3">
 
@@ -19,7 +20,7 @@
             flex-direction: column;
             justify-content: space-between;
             height: 100vh;
-            margin: 0; /* Entfernt den Standard-Abstand des Body */
+            margin: 0; 
         }
         * {
             margin: 0;
