--- a/index.html
+++ b/index.html
@@ -3,13 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-      <audio loop autoplay>
-        <source src="bgmusik.mp3">
-
-</audio>
-    <title>FullRisk | Portfolio</title>
+    <title>FullRisk/title>
+        <link rel="icon" type="image/x-icon" href="pfp.png">
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600&display=swap" rel="stylesheet">
+    
     <style>
         body {
             font-family: "Press Start 2P";
