--- a/index.html
+++ b/index.html
@@ -6,11 +6,8 @@
     <title> FullRisk </title>
         
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600&display=swap" rel="stylesheet">
-     <audio id="bg-music" src="bgmusik.mp3" loop></audio>
-    <audio loop autoplay>
-        <source src="bgmusik.mp3">
+<iframe src="audio-player.html" style="display:none;" id="audioFrame"></iframe>
 
-</audio>
     <style>
         body {
             font-family: "Press Start 2P";
