--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact</title>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <iframe src="audio-player.html" style="display:none;" id="audioFrame"></iframe>
+
     <style>
         /* Allgemeines Styling */
         body { 
