--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> FullRisk </title>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600&display=swap" rel="stylesheet">
-<audio id="bg-music" loop>
-    <source src="bgmusik.mp3" type="audio/mpeg">
-    Dein Browser unterstützt kein Audio-Element.
+<audio loop autoplay>
+        <source src="bgmusik.mp3">
+
 </audio>
 
 
