--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
    
     .navbar {
         width: 100%;
-        background-color: #fff;
+        background-color: #1a1a1a;
         padding: 15px 0;
         text-align: center;
         position: fixed;
@@ -59,7 +59,7 @@
         z-index: 1000;
     }
     .navbar a {
-        color: #000000;
+        color: #fff;
         text-decoration: none;
         margin: 0 15px;
         font-size: 18px;
