--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> FullRisk </title>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@300;400;500;600&display=swap" rel="stylesheet">
-    <audio loop autoplay>
+    <audio id= "bgmusik" loop autoplay>
         <source src="bgmusik.mp3">
     </audio>
 
